--- a/my-app/src/sass/components/_collapse.scss
+++ b/my-app/src/sass/components/_collapse.scss
@@ -5,10 +5,6 @@
   flex-direction: column;
   align-items: center;
 
-  @media(max-width:utilities.$query-mobile-value){
-    margin-top: 3rem; ;
-  }
-
   .collapse--title{
     width: 102.3rem ;
     height: 5.2rem ;
@@ -26,6 +22,8 @@
     
     @media(max-width:utilities.$query-mobile-value){
       width:33.5rem ;
+      height: 3rem;
+      
     }
 
     .collapse--title__icon{
@@ -39,6 +37,14 @@
       rotate: 45deg;
 
       transition: transform 0.3s ease-out;
+
+      @media(max-width:utilities.$query-mobile-value){
+        width: 1.3rem;
+        height: 1.3rem; 
+        border-top: utilities.$neutral-first-color 0.3rem solid;
+        border-left: utilities.$neutral-first-color 0.3rem solid;
+        border-radius: 15%;
+      }
     }
 
     .rotate{
@@ -48,33 +54,38 @@
 
   .collapse--content{
     width: 102.3rem ;
+    height: 0;
+
     border-radius: 0.5rem;
     padding: 1.5rem;
     margin-bottom: 0;
+    margin-top: 0;
+
     box-sizing: border-box;
+
     background-color: utilities.$neutral-fourth-color;
     
-
-    transition: transform 0.3s ease-out, margin-bottom 0.3s ease-out;
+    transition: transform 0.25s ease, margin-bottom 0.35s ease-out;
     transform: scaleY(0);
     transform-origin: top;
-    height: 0;
 
     @media(max-width:utilities.$query-mobile-value){
       width:33.5rem ;
     }
   }
-
-  .collapse--content.open{
-    transform: scaleY(1);
-    height: auto;
-    margin-bottom: 3rem;
-  }
 }
 
+.collapse.open .collapse--content{
+  transform: scaleY(1);
+  height: auto;
+  margin-bottom: 2rem;
+  margin-top: 0;
+  
+}
 
-
-
+.collapse.close .collapse--content {
+  margin-bottom: -10px;
+}
 
 
 
