--- a/my-app/src/sass/components/_gallery.scss
+++ b/my-app/src/sass/components/_gallery.scss
@@ -56,8 +56,9 @@
 
       background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
       border-radius: 1rem;
-      width: 34rem;
-      height: 34rem;
+      width: 33.5rem;
+      height: 33.54rem;
+      
     }
 
     .gallery--card__title{
