--- a/my-app/src/sass/layout/_banner.scss
+++ b/my-app/src/sass/layout/_banner.scss
@@ -7,7 +7,7 @@
   margin-bottom: 4.5rem;
 
   @media(max-width: utilities.$query-mobile-value){
-    margin-bottom: 0;
+    margin-bottom: 1.5rem;
     height: 11.1rem ;
   }
 
